# game

./: .gitignore  CMakeLists.txt
source/: app.cpp  app.hpp  background.cpp  base_object.cpp  base_object.hpp  button.cpp  button.hpp  data_base.cpp  data_base.hpp  editorial_place.cpp  editorial_place.hpp  gui.cpp  gui.hpp  last_stop.cpp  m_button.cpp  m_button.hpp  main.cpp  main_functions.cpp  main_functions.hpp  map.cpp  map.hpp  menu.cpp  menu.hpp  player.cpp  player.hpp  region.cpp  region.hpp  stone.cpp  stone.hpp  text_button.cpp  text_button.hpp  texture_rect_player_data.cpp  texture_rect_player_data.hpp
source/app/: app.cpp  app.hpp  button.cpp  button.hpp  m_button.cpp  m_button.hpp  menu.cpp  menu.hpp
source/gui/: background.hpp  gui.cpp  gui.hpp
source/objects/: base_object.cpp  base_object.hpp  map.cpp  map.hpp  object_rect_data.hpp  player.cpp  player.hpp  region.cpp  region.hpp  stone.cpp  stone.hpp
source/objects/map/: map.cpp  map.hpp  object_rect_data.cpp  object_rect_data.hpp  region.cpp  region.hpp
source/objects/player/: last_stop.hpp  player.cpp  player.hpp  texture_rect_data.cpp  texture_rect_data.hpp
